--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT=5000
 MONGO_URL=mongodb://localhost:27017/trial_db
 JWT_SECRET=mysecretkey
 NODE_ENV=development
+
+email=admin@gmail.com
+password=admin123
