add a cloud storage

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ NODE_ENV=development
 
 email=admin@gmail.com
 password=admin123
+
+CLOUDINARY_CLOUD_NAME=dgy0ipld9
+CLOUDINARY_API_KEY=245855373833126
+CLOUDINARY_API_SECRET=QMg9Ovn-oWiCMifdyY_1Ic0SlhY
