--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "nodemailer": "^6.9.4",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.1.11"
   }
 }
