--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ JWT_SECRET=mysecretkey
 NODE_ENV=development
 
 email=admin@gmail.com
-password=admin123
+password=admin@123
+username=admin
 
 CLOUDINARY_CLOUD_NAME=dgy0ipld9
 CLOUDINARY_API_KEY=245855373833126
