--- a/.env
+++ b/.env
@@ -10,3 +10,9 @@ username=admin
 CLOUDINARY_CLOUD_NAME=dgy0ipld9
 CLOUDINARY_API_KEY=245855373833126
 CLOUDINARY_API_SECRET=QMg9Ovn-oWiCMifdyY_1Ic0SlhY
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_PASS=bskp0b3QyNIGtkb
+SMTP_USER=9da323001@smtp-brevo.com
+SMTP_EMAIL=susildahal234@gmail.com
