--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ NODE_ENV=development
 email=admin@gmail.com
 password=admin@123
 username=admin
+role=admin
 
 CLOUDINARY_CLOUD_NAME=dgy0ipld9
 CLOUDINARY_API_KEY=245855373833126
