--- a/.env
+++ b/.env
@@ -7,6 +7,9 @@ email=admin@gmail.com
 password=admin@123
 username=admin
 role=admin
+address= Kathmandu, Nepal
+phone= +9779841234567
+
 
 CLOUDINARY_CLOUD_NAME=dgy0ipld9
 CLOUDINARY_API_KEY=245855373833126
