--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8000
-MONGO_URL=mongodb://localhost:27017/trial_db
+MONGO_URL=mongodb+srv://susildahal234_db_user:TgGZuf7OLjcJyzXM@cluster0.5e8yr8e.mongodb.net/ngo_db?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=mysecretkey
 NODE_ENV=development
 
