fix the error in smtp

--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@ CLOUDINARY_CLOUD_NAME=dgy0ipld9
 CLOUDINARY_API_KEY=245855373833126
 CLOUDINARY_API_SECRET=QMg9Ovn-oWiCMifdyY_1Ic0SlhY
 
-SMTP_HOST=smtp.gmail.com
+SMTP_HOST=smtp-relay.brevo.com
 SMTP_PORT=587
-SMTP_PASS=bskp0b3QyNIGtkb
 SMTP_USER=9da323001@smtp-brevo.com
+SMTP_PASS=bskp0b3QyNIGtkb
 SMTP_EMAIL=susildahal234@gmail.com
